--- a/src/IZKModbusGUI.form
+++ b/src/IZKModbusGUI.form
@@ -329,10 +329,11 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <enabled value="false"/>
                   <text value="Активировать"/>
                 </properties>
               </component>
-              <component id="cd11f" class="javax.swing.JPasswordField" binding="введитеКодАктивацииPasswordField" default-binding="true">
+              <component id="e3432" class="javax.swing.JTextField" binding="passwordField">
                 <constraints>
                   <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="300" height="-1"/>
@@ -340,6 +341,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <editable value="false"/>
                   <text value=""/>
                   <toolTipText value="Введите код активации"/>
                 </properties>
