--- a/src/ru/sid/izk/modbus/frames/IZKTerminal.form
+++ b/src/ru/sid/izk/modbus/frames/IZKTerminal.form
@@ -36,13 +36,15 @@
           <text value="Скорость связи"/>
         </properties>
       </component>
-      <component id="f489e" class="javax.swing.JFormattedTextField" binding="textField1" default-binding="true">
+      <component id="f489e" class="javax.swing.JFormattedTextField" binding="IZKCOMAddressField" default-binding="true">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="bc1ac" class="javax.swing.JLabel">
         <constraints>
