--- a/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
+++ b/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
@@ -1381,8 +1381,8 @@
                       <component id="d52ea" class="javax.swing.JButton" binding="manualButton">
                         <constraints>
                           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                            <preferred-size width="50" height="-1"/>
-                            <maximum-size width="50" height="-1"/>
+                            <preferred-size width="100" height="-1"/>
+                            <maximum-size width="100" height="-1"/>
                           </grid>
                         </constraints>
                         <properties>
@@ -1392,8 +1392,8 @@
                       <component id="22c9" class="javax.swing.JButton" binding="modeButton">
                         <constraints>
                           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                            <preferred-size width="50" height="-1"/>
-                            <maximum-size width="50" height="-1"/>
+                            <preferred-size width="100" height="-1"/>
+                            <maximum-size width="100" height="-1"/>
                           </grid>
                         </constraints>
                         <properties>
@@ -1403,8 +1403,8 @@
                       <component id="193a2" class="javax.swing.JButton" binding="closeButton">
                         <constraints>
                           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                            <preferred-size width="50" height="-1"/>
-                            <maximum-size width="50" height="-1"/>
+                            <preferred-size width="100" height="-1"/>
+                            <maximum-size width="100" height="-1"/>
                           </grid>
                         </constraints>
                         <properties>
@@ -1414,8 +1414,8 @@
                       <component id="91469" class="javax.swing.JButton" binding="openButton">
                         <constraints>
                           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                            <preferred-size width="50" height="-1"/>
-                            <maximum-size width="50" height="-1"/>
+                            <preferred-size width="100" height="-1"/>
+                            <maximum-size width="100" height="-1"/>
                           </grid>
                         </constraints>
                         <properties>
@@ -1425,8 +1425,8 @@
                       <component id="2aab4" class="javax.swing.JButton" binding="fullCloseButton">
                         <constraints>
                           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                            <preferred-size width="50" height="-1"/>
-                            <maximum-size width="50" height="-1"/>
+                            <preferred-size width="100" height="-1"/>
+                            <maximum-size width="100" height="-1"/>
                           </grid>
                         </constraints>
                         <properties>
@@ -1436,8 +1436,8 @@
                       <component id="23c73" class="javax.swing.JButton" binding="fullOpenButton">
                         <constraints>
                           <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                            <preferred-size width="50" height="-1"/>
-                            <maximum-size width="50" height="-1"/>
+                            <preferred-size width="100" height="-1"/>
+                            <maximum-size width="100" height="-1"/>
                           </grid>
                         </constraints>
                         <properties>
@@ -1856,7 +1856,7 @@
             </constraints>
             <properties>
               <enabled value="true"/>
-              <text value="Label"/>
+              <text value="состояние"/>
             </properties>
           </component>
         </children>
