Попровил чтение всех настроек, доделал сохранение

--- a/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
+++ b/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
@@ -1910,7 +1910,7 @@
       <component id="a77ec" class="javax.swing.JButton" binding="terminalButton">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="169" height="30"/>
+            <preferred-size width="150" height="30"/>
             <maximum-size width="150" height="30"/>
           </grid>
         </constraints>
@@ -1928,24 +1928,24 @@
       </component>
       <hspacer id="b0c2d">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="10"/>
-            <maximum-size width="-1" height="10"/>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="350" height="10"/>
+            <maximum-size width="350" height="10"/>
           </grid>
         </constraints>
       </hspacer>
       <component id="c2b60" class="javax.swing.JProgressBar" binding="progressBar">
         <constraints>
-          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="25"/>
-            <maximum-size width="-1" height="25"/>
+          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="350" height="25"/>
+            <maximum-size width="350" height="25"/>
           </grid>
         </constraints>
         <properties/>
       </component>
       <component id="14324" class="javax.swing.JButton" binding="readAllButton">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Считать все настройки"/>
@@ -1953,7 +1953,10 @@
       </component>
       <component id="dc435" class="javax.swing.JButton" binding="searchButton">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+            <maximum-size width="150" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Поиск датчиков"/>
